<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="@dimen/corner_radius"
    android:layout_margin="@dimen/common_padding_min"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_min">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTracker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:icon="@drawable/ic_local_shipping_"
            app:iconGravity="textEnd"
            android:text="@string/order_tracker_shippment"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order_status"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintTop_toTopOf="@id/btnTracker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btnTracker"
            app:layout_constraintEnd_toStartOf="@id/btnTracker" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order_id"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvProductNames"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Un dicksote"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvId" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_chat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProductNames"
            app:layout_constraintBottom_toTopOf="@id/btnTracker"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/chipChat"
            app:layout_constraintBottom_toBottomOf="@id/chipChat"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:text="@string/order_total_price"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>