<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/common_padding_default">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_min"
        android:hint="@string/hint_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilQueantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_min"
        android:hint="@string/hint_Quantity"
        android:layout_marginEnd="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tilDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_min"
        android:hint="@string/hint_Price"
        android:layout_marginStart="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilDescription"
        app:prefixText="$"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/imgProductPreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tilQueantity"
        android:layout_marginTop="@dimen/common_padding_min"
        android:background="@color/gray_100"
        android:layout_marginEnd="@dimen/common_padding_min"
        app:layout_constraintDimensionRatio="16:9" />

    <ImageButton
        android:id="@+id/imgBtnProduct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_baseline_image_search_24"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="@id/imgProductPreview"
        app:layout_constraintEnd_toEndOf="@id/imgProductPreview"
        app:layout_constraintTop_toTopOf="@id/imgProductPreview"
        app:layout_constraintBottom_toBottomOf="@id/imgProductPreview" />


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        tools:progress="75"
        app:layout_constraintStart_toStartOf="@id/tilPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgProductPreview" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvProgress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Subiendo... 75%"
        app:layout_constraintStart_toStartOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="@id/progressBar"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/common_padding_min" />
</androidx.constraintlayout.widget.ConstraintLayout>